# ncn-cuda

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  bench_ncn.py  bench_ncn_fwd_bwd copy.py  bench_ncn_fwd_bwd.py  bench_ncn_fwd_bwd_debug copy.py  bench_ncn_fwd_bwd_debug.py  bench_ncn_v1.py  bench_ncn_v2.py  bench_ncn_v3.py  bench_ncn_v4.py  bench_ncn_v4_v2 copy 2.py  bench_ncn_v4_v2 copy.py  bench_ncn_v4_v2.py  bench_ncn_v4_v2_v3.py  cmake_install.cmake  main_ncn.cpp  ncn_bwd.cu  ncn_bwd_old.cu  ncn_fwd.cu  ncn_triton_net.py  test_groups.py  test_groups_v2.py  test_groups_v3.py  triton_reference.py
ncn_cuda/: ncn_bwd.cpp  ncn_bwd.cu  ncn_bwd_cuda_kernel.cu  ncn_cuda.cpp  ncn_fwd.cpp  ncn_fwd.cu  ncn_fwd_cuda_kernel.cu  ncn_pytorch_wrapper_v1.py  ncn_pytorch_wrapper_v2.py  setup.py
ncn_triton/: group_tensors.py  ncn_triton.py
torch_ref/: ncn_pytorch.py  ncn_pytorch_invertible.py  torch_ref.py  torch_ref_v2.py
